<resources>
    <string name="app_name"> MikroTik Monitor </string>

    <string name="text_settings_feature_name"> Settings </string>

    <string name="text_settings_server_url_label"> URL Server </string>

    <string name="hint_edit_server_address"> Server Address </string>
    <string name="button_save_settings"> Save Settings </string>

    <string name="action_save_settings_success"> Saving Successful </string>
    <string name="action_save_settings_fail"> Saving Failed</string>

    <string name="primary_shared_preference_id"> PRIMARY_SHARED_PREFERENCE </string>
    <string name="server_address_preference_key"> SERVER_ADDRESS </string>

    <string name="server_address_preference_default_val"> http://localhost:8000 </string>
    <string name="ACTION_BAN_CONNECTED_CLIENT">Disconnect / Ban</string>
    <string name="ACTION_DELETE_ACCESS_LIST_ITEM">Delete</string>
    <string name="ACTION_FAILED">Failed</string>

    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_button">Log In</string>
    <string name="invalid_credentials">Username atau password salah</string>
    <string name="log_out">Log Out</string>
    <string name="router_menu"> Router </string>
    <string name="connection_problem">Terjadi masalah saat menghubungi server</string>

    <string name="ACTION_SUCCESS">Tindakan berhasil</string>
    <string name="download_speed">Download Speed</string>
    <string name="upload_speed">Upload Speed</string>
    <string name="bandwidth_usage">Bandwidth Usage</string>
    <string name="access_point">Access Point</string>
    <string name="mac_address">MAC Address</string>
    <string name="network_interface">Interface</string>
    <string name="hint_edit_speed_limit">Speed Limit</string>
    <string name="text_settings_speed_limit">Speed Limit</string>
    <string name="button_save_speed_limit">Save Speed Limit</string>
    <string name="button_save_server_url">Save Server URL</string>
</resources>
