<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_settings_linear_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        >

    <TextView
            android:textSize="16pt"
            android:text="@string/text_settings_feature_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    </TextView>

    <EditText
            android:id="@+id/edit_text_server_address"
            android:hint="@string/hint_edit_server_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    </EditText>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
        >
        <Button
                android:id="@+id/button_save_settings"
                android:text="@string/button_save_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
        </Button>
    </LinearLayout>
</LinearLayout>
